--- a/css/styles.css
+++ b/css/styles.css
@@ -512,7 +512,7 @@ body {
   fill: var(--svg-color-primary);
   transition-property: border-color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2,1);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link:hover,
@@ -557,7 +557,7 @@ body {
 }
 
 /*.footer-address-list {
-/* } */
+} */
 
 .footer-address-item {
   margin-bottom: 9px;
@@ -829,7 +829,7 @@ body {
   pointer-events: none;
 }
 
-.modal.is-hidden .modal-close{
+.modal.is-hidden .modal-close {
   transform: translate(-50%, -50%) scale(0.5);
   transition-property: transform;
   transition-duration: 250ms;
@@ -858,8 +858,173 @@ body {
   background-color: var(--primary-bg-color);
   height: 30px;
   width: 30px;
-  border: 1px solid  rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn:hover .modal-close-icon,
+.modal-close-btn:focus .modal-close-icon {
+  fill: var(--primary-accent-color);
+}
+
+.modal-close-icon {
+  fill: #000000;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* F O R M S*/
+
+.form-application {
+  padding: 40px;
+}
+
+.form-title {
+  min-width: 448px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: calc(23 / 20);
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #000000;
+  margin-bottom: 12px;
+}
+
+.form-field {
+  position: relative;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  transition-property: fill, border;
+  transition-duration: 3250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-field label {
+  margin-bottom: 4px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: calc(14 / 12);
+  letter-spacing: 0.01em;
+  color: #757575;
+}
+
+.form-field input,
+            textarea {
+  padding: 12px 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.form-field textarea {
+  padding: 12px 16px;
+  height: 120px;
+}
+
+.form-field::placeholder {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: calc(14 / 12);
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.form-icon {
+  position: absolute;
+  top: 32px;
+  left: 15px;
+  fill: #212121;
+  /* margin-right: 15px; */
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-field:hover .form-icon,
+.form-field:focus .form-icon {
+  fill: var(--primary-accent-color);
+}
+
+.form-field input:hover,
+.form-field input:focus {
+  border-color: #2196f3;
+}
+
+textarea {
+  resize: none;
+}
+
+.form-agreement {
+  display: flex;
+  align-items: center;
+  width: 425px;
+  height: 24px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+.form-agreement input[type="checkbox"] {
+  /* background: #212121;
+  width: 16px;
+  height: 15px; */
+}
+
+.form-agreement label {
+  margin-left: 8.38px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: calc(24 / 14);
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.form-agreement-yes {
+  color: var(--primary-accent-color);
+}
+
+.form-btn {
+  /*boton*/
+  margin: 0 140px;
+  width: 200px;
+  height: 50px;
+  background: var(--primary-accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  padding: 10px 52px;
+  border-color: transparent;
+  transition-property: background;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-btn:hover,
+.form-btn:focus {
+  background: #188ce8;
+}
+
+.form-btn-text {
+  /*boton text*/
+  font-family: inherit;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: calc(30 / 16);
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--primary-bg-color);
 }
