--- a/css/styles.css
+++ b/css/styles.css
@@ -651,12 +651,6 @@ body {
   margin-left: 93px;
 }
 
-.subscribe-list {
-  display: flex;
-  justify-content: flex-start;
-  gap: 12px;
-}
-
 .subscribe-footer-title {
   font-family: inherit;
   font-style: normal;
@@ -668,14 +662,11 @@ body {
   margin-bottom: 20px;
 }
 
-/* .subscribe-form-field {
-} */
-
-.subscribe-form-field textarea {
-  padding-top: 15px;
-  padding-left: 15px;
+.subscribe-form input {
+  padding-left: 16px;
   width: 358px;
   height: 50px;
+  margin-right: 12px;
   background: var(--dark-bg-color);
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -692,8 +683,8 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.subscribe-form-field textarea:hover,
-.subscribe-form-field textarea:focus {
+.subscribe-form input:hover,
+.subscribe-form input:focus {
   outline: none;
   border: 1px solid #2196f3;
 }
@@ -905,7 +896,7 @@ body {
   top: 50%;
   left: 50%;
   width: 528px;
-  height: 581px;
+  /* height: 581px; */
   padding: 40px;
   background-color: var(--primary-bg-color);
   transform: translate(-50%, -50%) scale(1);
@@ -974,14 +965,17 @@ body {
 
 .form-field {
   position: relative;
-  margin-bottom: 10px;
   display: flex;
   flex-direction: column;
   transition-property: fill, border;
   transition-duration: 3250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
+.form-field input {
+  margin-bottom: 10px;
+}
 .form-field label {
   margin-bottom: 4px;
   font-family: "Roboto";
@@ -1006,6 +1000,8 @@ body {
 .form-field textarea {
   padding: 12px 16px;
   height: 120px;
+  margin-bottom: 20px;
+  
 }
 
 .form-field::placeholder {
@@ -1049,7 +1045,6 @@ textarea {
 
 .form-agreement {
   width: 425px;
-  height: 24px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
@@ -1106,7 +1101,7 @@ textarea {
 }
 .form-btn {
   /*form boton*/
-  margin: 0 140px;
+  margin:  0 140px;
   width: 200px;
   height: 50px;
   background: var(--primary-accent-color);
